tests/success/array_index_out_of_range_lower.tig
let
    type ints = array of int
    var a := ints[10] of 0
in
    a[-100]
end
