tests/fail/undefined_type_for_array_declaration.tig
let
    type arrayint = array of rectype
in
end
